DataPipeline for Streaming DataSets
Updated Processor Spec to Swagger spec and added IdMetric Specs

Issue-ID: ACUMOS-1198
