# DataPipeline/swagger_server/models/__init__.py
@@ -7,6 +7,7 @@ from swagger_server.models.data_pipeline_service_data_source import DataPipeline
 from swagger_server.models.data_pipeline_service_data_source_pool import DataPipelineServiceDataSourcePool
 from swagger_server.models.data_pipeline_service_empty import DataPipelineServiceEmpty
 from swagger_server.models.data_pipeline_service_extract import DataPipelineServiceExtract
+from swagger_server.models.data_pipeline_service_id_metrics import DataPipelineServiceIdMetrics
 from swagger_server.models.data_pipeline_service_identifier import DataPipelineServiceIdentifier
 from swagger_server.models.data_pipeline_service_identifier_type import DataPipelineServiceIdentifierType
 from swagger_server.models.data_pipeline_service_kv_pair import DataPipelineServiceKVPair
