# DataPipeline/swagger_server/models/data_pipeline_service_id_metrics.py
@@ -1,0 +1,92 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.data_pipeline_service_identifier import DataPipelineServiceIdentifier  # noqa: F401,E501
+from swagger_server.models.data_pipeline_service_kv_pairs import DataPipelineServiceKVPairs  # noqa: F401,E501
+from swagger_server import util
+
+
+class DataPipelineServiceIdMetrics(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, id: DataPipelineServiceIdentifier=None, metrics: DataPipelineServiceKVPairs=None):  # noqa: E501
+        """DataPipelineServiceIdMetrics - a model defined in Swagger
+
+        :param id: The id of this DataPipelineServiceIdMetrics.  # noqa: E501
+        :type id: DataPipelineServiceIdentifier
+        :param metrics: The metrics of this DataPipelineServiceIdMetrics.  # noqa: E501
+        :type metrics: DataPipelineServiceKVPairs
+        """
+        self.swagger_types = {
+            'id': DataPipelineServiceIdentifier,
+            'metrics': DataPipelineServiceKVPairs
+        }
+
+        self.attribute_map = {
+            'id': 'id',
+            'metrics': 'metrics'
+        }
+
+        self._id = id
+        self._metrics = metrics
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'DataPipelineServiceIdMetrics':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The DataPipelineServiceIdMetrics of this DataPipelineServiceIdMetrics.  # noqa: E501
+        :rtype: DataPipelineServiceIdMetrics
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id(self) -> DataPipelineServiceIdentifier:
+        """Gets the id of this DataPipelineServiceIdMetrics.
+
+
+        :return: The id of this DataPipelineServiceIdMetrics.
+        :rtype: DataPipelineServiceIdentifier
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id: DataPipelineServiceIdentifier):
+        """Sets the id of this DataPipelineServiceIdMetrics.
+
+
+        :param id: The id of this DataPipelineServiceIdMetrics.
+        :type id: DataPipelineServiceIdentifier
+        """
+
+        self._id = id
+
+    @property
+    def metrics(self) -> DataPipelineServiceKVPairs:
+        """Gets the metrics of this DataPipelineServiceIdMetrics.
+
+
+        :return: The metrics of this DataPipelineServiceIdMetrics.
+        :rtype: DataPipelineServiceKVPairs
+        """
+        return self._metrics
+
+    @metrics.setter
+    def metrics(self, metrics: DataPipelineServiceKVPairs):
+        """Sets the metrics of this DataPipelineServiceIdMetrics.
+
+
+        :param metrics: The metrics of this DataPipelineServiceIdMetrics.
+        :type metrics: DataPipelineServiceKVPairs
+        """
+
+        self._metrics = metrics
